--- a/MyBatchmates.html
+++ b/MyBatchmates.html
@@ -389,7 +389,7 @@
 
         <div class="me-card">
           <div class="me-label">Me in the Block</div>
-          <div class="me-sub">A quick snapshot of me.</div>
+          <div class="me-sub">Network and Security.</div>
           <div class="me-photo">
             <!-- use whatever solo photo you like here -->
             <img src="me.jpg" alt="Kazler Carl Umaging">
