--- a/MyBatchmates.html
+++ b/MyBatchmates.html
@@ -388,8 +388,8 @@
         </div>
 
         <div class="me-card">
-          <div class="me-label">Me in the Block</div>
-          <div class="me-sub">Network and Security.</div>
+          <div class="me-label">Network and Security</div>
+          <div class="me-sub">Umaging, Kazler Carl F.</div>
           <div class="me-photo">
             <!-- use whatever solo photo you like here -->
             <img src="me.jpg" alt="Kazler Carl Umaging">
