--- a/MyBatchmates.html
+++ b/MyBatchmates.html
@@ -379,7 +379,7 @@
 
   <section class="hero">
     <div class="batch-card">
-      <h1 class="batch-title">Dyslers</h1>
+      <h1 class="batch-title">The Dyslers</h1>
       <p class="batch-subtitle">My batchmates of 2025–2029 at University of the Cordilleras, CICS 1A – IT Specialists.</p>
 
       <div class="photo-row">
